Add ignore_errors because of Dell Latitude

--- a/arch_install/roles/bootloader/tasks/main.yml
+++ b/arch_install/roles/bootloader/tasks/main.yml
@@ -10,6 +10,7 @@
 
 - name: Install bootloader
   command: bootctl install
+  ignore_errors: yes
 
 - name: Install loader.conf
   copy: src=files/loader.conf dest=/boot/loader/loader.conf
