--- a/laptop_setup/roles/i3/files/config
+++ b/laptop_setup/roles/i3/files/config
@@ -20,7 +20,7 @@ set $mod Mod4
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
 # font pango:DejaVu Sans Mono 10
-font pango:Noto Sans Bold 6
+font pango:Noto Sans Bold
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -194,7 +194,7 @@ workspace_auto_back_and_forth yes
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        font pango:Noto Sans Bold 6
+        #font pango:Noto Sans Bold 6
         position top
         status_command i3status
         #tray_output primary
