--- a/laptop_setup/roles/etc/tasks/main.yml
+++ b/laptop_setup/roles/etc/tasks/main.yml
@@ -17,14 +17,16 @@
 
 - name: /etc/systemd/logind.conf
   lineinfile:
-    dest: /etc/systemd/logind.conf
+    path: /etc/systemd/logind.conf
     state: present
+    regexp: '#KillUserProcesses'
     line: 'KillUserProcesses=yes'
   become: true
 
 - name: /etc/systemd/system.conf
   lineinfile:
-    dest: /etc/systemd/system.conf
+    path: /etc/systemd/system.conf
     state: present
+    regexp: '#RuntimeWatchdogSec='
     line: 'RuntimeWatchdogSec=20'
   become: true
