Change /etc/resolv.conf mode

--- a/arch_install/roles/network/tasks/main.yml
+++ b/arch_install/roles/network/tasks/main.yml
@@ -12,7 +12,8 @@
 
 - name: symlink /etc/resolv.conf
   file:
-    src: /run/systemd/resolve/resolv.conf
+    #src: /run/systemd/resolve/resolv.conf
+    src: /usr/lib/systemd/resolv.conf
     dest: /etc/resolv.conf
     state: link
     force: yes
