--- a/laptop_setup/roles/gnome/files/settings.ini
+++ b/laptop_setup/roles/gnome/files/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Adapta-Nokto
+gtk-theme-name=Adapta
 gtk-icon-theme-name=Paper
 gtk-font-name=Noto Sans 8
 gtk-cursor-theme-size=0
