--- a/arch_install/roles/network/tasks/main.yml
+++ b/arch_install/roles/network/tasks/main.yml
@@ -1,19 +1,25 @@
 ---
 # tasks file for network
-- name: Enable systemd-networkd
-  command: systemctl enable systemd-networkd.service
-  args:
-    creates: /etc/systemd/system/multi-user.target.wants/systemd-networkd.service
+# - name: Enable systemd-networkd
+#   command: systemctl enable systemd-networkd.service
+#   args:
+#     creates: /etc/systemd/system/multi-user.target.wants/systemd-networkd.service
 
-- name: Enable systemd-resolved
-  command: systemctl enable systemd-resolved.service
-  args:
-    creates: /etc/systemd/system/multi-user.target.wants/systemd-resolved.service
+# - name: Enable systemd-resolved
+#   command: systemctl enable systemd-resolved.service
+#   args:
+#     creates: /etc/systemd/system/multi-user.target.wants/systemd-resolved.service
 
-- name: symlink /etc/resolv.conf
+- name: Enable {{ item }}
+  systemd:
+    name: "{{ item }}"
+    enabled: yes
+  loop: [systemd-resolved.service, systemd-networkd.service]
+
+- name: Symlink /etc/resolv.conf
   file:
-    #src: /run/systemd/resolve/resolv.conf
-    src: /usr/lib/systemd/resolv.conf
+    src: /run/systemd/resolve/resolv.conf
+    # src: /usr/lib/systemd/resolv.conf
     dest: /etc/resolv.conf
     state: link
     force: yes
