--- a/laptop_setup/roles/gnome/files/terminal.conf
+++ b/laptop_setup/roles/gnome/files/terminal.conf
@@ -17,10 +17,11 @@ highlight-colors-set=true
 use-system-font=false
 use-theme-colors=false
 cursor-foreground-color='rgb(255,69,0)'
-font='Noto Mono 12'
+font='Fira Mono Medium 11'
 scrollback-unlimited=true
 bold-color-same-as-fg=false
 bold-color='rgb(30,144,255)'
+bold-is-bright=true
 background-color='rgb(18,18,18)'
 audible-bell=true
 highlight-background-color='rgb(28,28,28)'
