--- a/laptop_setup/roles/user/tasks/main.yml
+++ b/laptop_setup/roles/user/tasks/main.yml
@@ -4,7 +4,7 @@
     name: '{{ username }}'
     shell: /bin/zsh
     group: users
-    groups: wheel
+    groups: [wheel, video]
     password: "{{ user_password |password_hash('sha512') }}"
     update_password: on_create
   become: true
