Update icon theme

--- a/laptop_setup/roles/gnome/files/interface.conf
+++ b/laptop_setup/roles/gnome/files/interface.conf
@@ -1,5 +1,5 @@
 [org/gnome/desktop/interface]
-cursor-theme='Paper'
-icon-theme='Paper'
+cursor-theme='Adwaita'
+icon-theme='Papirus'
 gtk-theme='Adapta-Nokto'
 monospace-font-name='Droid Sans Mono 11'
