Configure mate notification

--- a/laptop_setup/roles/i3/files/config
+++ b/laptop_setup/roles/i3/files/config
@@ -230,7 +230,7 @@ assign [class="Thunderbird"] → $ws1
 for_window [class="Spotify" instance="spotify"] move to workspace <span size='large' font_weight='light'> </span> Spotify <>
 for_window [class="Slack" instance="slack"] move to workspace <span size='large' font_weight='light'> </span> Slack <>
 
-#exec --no-startup-id /usr/lib/mate-notification-daemon/mate-notification-daemon
+exec --no-startup-id /usr/lib/mate-notification-daemon/mate-notification-daemon
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec --no-startup-id nm-applet
+exec_always --no-startup-id nm-applet
 exec --no-startup-id /usr/bin/feh --bg-scale ~/Downloads/canyon_16_1_by_lyssonan-d8gvns3.jpg
