Fix regex for Papirus globbing

--- a/laptop_setup/roles/i3/tasks/papirus.yml
+++ b/laptop_setup/roles/i3/tasks/papirus.yml
@@ -4,8 +4,8 @@
     path: "{{ item }}"
   register: st
   with_fileglob: 
-    - "/usr/share/icons/Papirus/{{ icon_size }}/places/folder-black-*"
-    - "/usr/share/icons/Papirus/{{ icon_size }}/places/user-black-*"
+    - "/usr/share/icons/Papirus/{{ icon_size }}/places/folder-black*"
+    - "/usr/share/icons/Papirus/{{ icon_size }}/places/user-black*"
 
 - name: Create symbolic link {{ item.stat.path|basename|regex_replace('-black') }}
   file:
