--- a/laptop_setup/roles/i3/tasks/papirus.yml
+++ b/laptop_setup/roles/i3/tasks/papirus.yml
@@ -4,13 +4,13 @@
     path: "{{ item }}"
   register: st
   with_fileglob: 
-    - "/usr/share/icons/Papirus/{{ icon_size }}/places/folder-black*"
-    - "/usr/share/icons/Papirus/{{ icon_size }}/places/user-black*"
+    - "/usr/share/icons/Papirus/{{ icon_size }}/places/folder-{{ color }}*"
+    - "/usr/share/icons/Papirus/{{ icon_size }}/places/user-{{ color }}*"
 
-- name: Create symbolic link {{ item.stat.path|basename|regex_replace('-black') }}
+- name: Create symbolic link {{ item.stat.path|basename|regex_replace('-'+color) }}
   file:
     src: "{{ item.stat.path|basename }}"
-    path: "{{ item.stat.path|regex_replace('-black') }}"
+    path: "{{ item.stat.path|regex_replace('-'+color) }}"
     state: link
     force: yes
   when: 
